test/reject/single_binder_let.alg
sort S;
var x : S;

axiom let (a) = x in a = x;
